Query oarameters and Fragment and accessing files from URL

--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -2,4 +2,4 @@
 <p>User name is {{user.name}}</p>
 
 <hr>
-<a [routerLink]="['/users',10,'Anna']">Load Anna</a>
+<!-- <a [routerLink]="['/users',user.id,user.name]">Load User</a> -->
