--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,4 +2,4 @@
 <p>Manage your Servers and Users.</p>
 
 
-<button class="btn btn-primary" (click)="OnLoadServers()"> Action</button>
+<button class="btn btn-primary" (click)="OnLoadServers()"> Load server 1 </button>
