--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,12 +1,16 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
-      <a href="#" class="list-group-item" *ngFor="let server of servers">
+      <a
+      [routerLink]="['/servers',server.id]"
+      [queryParams]="{allowEdit:server.id}"
+      fragment="loading"
+      href="#" class="list-group-item" *ngFor="let server of servers">
         {{ server.name }}
       </a>
     </div>
   </div>
-  <div class="col-xs-12 col-sm-4">
+  <div class="col-xs-12 col-sm-4"> 
     <!-- <a href="/servers"> Reload</a> -->
     <!-- <a routerLink="/servers"> Reload</a>
     <a routerLink="../servers"> Reload</a> -->
