child nested Routes and export AppRoutingModule to app module

--- a/src/app/servers/edit-server/edit-server.component.html
+++ b/src/app/servers/edit-server/edit-server.component.html
@@ -11,4 +11,4 @@
 </div>
 <button class="btn btn-primary" (click)="onUpdateServer()">Update Server</button>
 <hr>
-<button class="btn btn-primary" (click)="LoadServer3()">Load Server 3</button>
+<!-- <button class="btn btn-primary" (click)="LoadServer3()">Load Server 3</button> -->
