--- a/src/app/servers/server/server.component.html
+++ b/src/app/servers/server/server.component.html
@@ -1,2 +1,8 @@
-<h5>{{ server.name }}</h5>
-<p>Server status is {{ server.status }}</p>
+<div>
+    <p style="font-weight: bold; color: darkred;" *ngIf="!isAllowEdit; else AllowedToEdit"> Your are not allowed to Edit</p>
+</div>
+<ng-template #AllowedToEdit>
+    <h5>{{ server.name }}</h5>
+    <p>Server status is {{ server.status }}</p>
+    <button class="btn btn-primary" (click)="onEdit()"> Edit server</button>
+</ng-template>
