--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -3,7 +3,7 @@
     <div class="list-group">
       <a
       [routerLink]="['/servers',server.id]"
-      [queryParams]="{allowEdit:server.id}"
+      [queryParams]="{allowEdit:server.id==3?'1':'0'}"
       fragment="loading"
       href="#" class="list-group-item" *ngFor="let server of servers">
         {{ server.name }}
@@ -14,9 +14,9 @@
     <!-- <a href="/servers"> Reload</a> -->
     <!-- <a routerLink="/servers"> Reload</a>
     <a routerLink="../servers"> Reload</a> -->
-    <button class="btn btn-primary" (click)="ReloadServers()">Reload Servers</button>
-    <app-edit-server></app-edit-server>
+    <!-- <app-edit-server></app-edit-server>
     <hr>
-    <app-server></app-server>
+    <app-server></app-server> -->
+    <router-outlet></router-outlet>
   </div>
 </div>
