CanActivate with Login and Logout

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,3 +3,9 @@
 
 
 <button class="btn btn-primary" (click)="OnLoadServers()"> Load server 1 </button>
+
+<hr>
+<button class="btn btn-primary" (click)="onLogin()"> Login</button>
+<hr>
+
+<button class="btn btn-primary" (click)="onLogout()">Logout</button>
